<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app">SBCutPictures</string>
    <string name="uncaught_exception">Uncaught exception</string>
    <string name="error_not_implemented">It is not implemented</string>
    <string name="width_value">width=%d</string>
    <string name="height_value">height=%d</string>
    <string name="scale_value">scale=%.2f</string>
    <string name="choose_folder">Choose folder</string>
    <string name="source_folder">Source folder</string>
    <string name="backup_folder">Backup folder</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="cut_width">Cut width</string>
    <string name="cut_height">Cut height</string>
    <string name="name_pattern">Name pattern</string>
    <string name="image_format">Image format</string>
    <string name="edit_values">Edit values</string>
    <string name="edit_values_">Edit values (%d)</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="value">Value</string>
    <string name="pos">Pos</string>
    <string name="jpg_quality">JPG quality</string>
    <string name="file_size">%.2f kb</string>
    <string name="found_files">Found %d files</string>
    <string name="deleted_files">Deleted %d files</string>
    <string name="color_picker">Color picker</string>
    <string name="frame_color">Frame color</string>
    <string name="save">Save</string>
    <string name="save_as">Save as copy</string>
    <string name="undo">Restore from backup</string>
    <string name="cleanup_backup">Cleanup backup</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_left">Rotate left</string>
    <string name="mirror_x">Mirror horisontally</string>
    <string name="mirror_y">Mirror vertically</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="info">Buttons info</string>
    <string name="fit_width">Fit to width</string>
    <string name="fit_height">Fit to height</string>
    <string name="load_failed">load failed</string>
</resources>
